--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,11 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 body {
   color: var(--foreground);
   background-image: url('/assets/background.png');
@@ -23,6 +28,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 @layer utilities {
